fixed extra white space on the right

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,9 @@
 
 body,
 html {
+  width: 100%;
   height: 100%;
+  overflow-x: hidden;
   background-color: white;
 }
 
